Remove deprecated test files related to cell types, diseases, tissues, and marker database integration from the testthat directory. These changes streamline the testing framework by eliminating unused code and ensuring a cleaner codebase.

--- a/biomart_config.json
+++ b/biomart_config.json
@@ -9,6 +9,7 @@
             {
               "role": "source",
               "file": "original_human_healthy.csv",
+              "outfile": "light_human_healthy.csv",
               "species": "Human",
               "tax_id": 9606,
               "ensembl_dataset": "hsapiens_gene_ensembl",
@@ -19,6 +20,7 @@
             {
               "role": "source",
               "file": "original_mouse_healthy.csv",
+              "outfile": "light_mouse_healthy.csv",
               "species": "Mouse",
               "tax_id": 10090,
               "ensembl_dataset": "mmusculus_gene_ensembl",
@@ -28,6 +30,7 @@
             },
             {
               "role": "derived",
+              "outfile": "light_rat_healthy.csv",
               "species": "Rat",
               "tax_id": 10116,
               "ensembl_dataset": "rnorvegicus_gene_ensembl",
@@ -42,3 +45,4 @@
     }
   ]
 }
+
